Fin de detalles boostrap

--- a/Universidad/Academico/templates/edicionCurso.html
+++ b/Universidad/Academico/templates/edicionCurso.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <form action="/edicionCurso/" method="POST">
           {% csrf_token %}
-          <div class="form-group">
+          <div class="d-grid gap-2">
             <input
               type="text"
               id="txtCodigo"
@@ -19,8 +19,6 @@
               readonly
               required
             />
-          </div>
-          <div class="form-group">
             <input
               type="text"
               id="txtNombre"
@@ -30,8 +28,6 @@
               maxlength="50"
               required
             />
-          </div>
-          <div class="form-group">
             <input
               type="text"
               id="numCreditos"
@@ -42,8 +38,6 @@
               value="{{curso.creditos}}"
               required
             />
-          </div>
-          <div class="form-group">
             <button type="submit" class="btn btn-success btn-block text-white">
               Guardar
             </button>
